# rust-archaven

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  llms.txt
.github/: CODEOWNERS
examples/: basic_architecture_test.rs
examples/sample_app/src/app/orders/: mod.rs
examples/sample_app/src/app/orders/application/: create_order.rs
examples/sample_app/src/app/orders/domain/: order.rs
examples/sample_app/src/app/orders/http/: handler.rs
examples/sample_app/src/app/orders/infrastructure/: database.rs
src/: error.rs  graph.rs  lib.rs  path.rs  rule.rs  scanner.rs  violation.rs
tests/: check.rs  patterns.rs  rules.rs  violations.rs
