[package]
name = "archaven"
version = "1.1.0"
edition = "2021"
rust-version = "1.76"
description = "A small Rust dependency rule checker for modular architectures."
license = "MIT OR Apache-2.0"
repository = "https://github.com/mtanasiewicz/rust-archaven"
homepage = "https://github.com/mtanasiewicz/rust-archaven"
documentation = "https://docs.rs/archaven"
readme = "README.md"
keywords = ["architecture", "dependencies", "testing", "modules"]
categories = ["development-tools::testing"]
exclude = ["/docs/superpowers/**", "/AGENTS.md", "/Cargo.lock"]

[dependencies]
globset = "0.4"
proc-macro2 = { version = "1.0", features = ["span-locations"] }
syn = { version = "2.0", features = ["full", "visit"] }
thiserror = "1.0"
walkdir = "2.5"

[dev-dependencies]
tempfile = "3.10"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "warn"
pedantic = "warn"
